Switch get(0) to getFirst() and make removeCalories more concise